Update second example, remove generated files, and reorganize

--- a/01-convert-benchmarkset.ipynb
+++ b/01-convert-benchmarkset.ipynb
@@ -11,20 +11,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The basic strategy is going to be:\n",
-    "0. Download the host-guest file from GitHub, so we know we are starting fresh.\n",
-    "1. Create a PDB with proper `CONECT` records.\n",
-    "2. Split the PDB into separate topologies, starting by extracting the host and guest.\n",
-    "3. Use the host and guest topologies to create `mol2` files (with SYBYL atom types) for the host and guest.\n",
-    "4. Extract the dummy atoms, water, and ions into a separate PDB -- we'll come back to these later.\n",
-    "4. Read the host and guest `mol2` files into a list of `OEMol`s.\n",
-    "5. Then, use the list of `OEMol`s to create an OpenMM system.\n",
-    "6. Convert the OpenMM system into a ParmEd structure, so we can merge the host and guest with water and ions."
+    "**CB7-memantine**\n",
+    "\n",
+    "The initial bonded and Lennard-Jones parameters are GAFF v1.7 with partial charges generated using RESP, and conformation given by docking the host and guest with MOE. For more information, see [here](https://github.com/MobleyLab/benchmarksets/tree/d9bd05719fe42a390442d3984eccec591ec32950/input_files)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The conversion strategy is outlined in the [README](README.md). Briefly, we will download the files from the `benchmarksets` repository, create a PDB, extract the host and guest as topologies, re-parameterize those molecules with SMIRNOFF99Frosst bond, angle, torsion, and Lennard-Jones parameters, then parameterize the water and ions with TIP3P and Joung-Cheatham, merge the structures, and write out a new set of combined parameters and coordinates."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [
     {
@@ -48,45 +49,52 @@
     "from openforcefield.typing.engines.smirnoff import ForceField, unit\n",
     "from openforcefield.utils import mergeStructure\n",
     "\n",
-    "from utils import (create_pdb_with_conect, prune_conect)\n",
-    "from utils import (split_topology, create_host_guest_topology)\n",
-    "from utils import (create_host_mol2, convert_mol2_to_sybyl_antechamber)\n",
-    "from utils import (load_mol2, check_unique_atom_names)\n",
-    "from utils import (check_bond_lengths)\n",
-    "from utils import (extract_water_and_ions, create_water_and_ions_parameters)"
+    "from utils import (create_pdb_with_conect, prune_conect, split_topology, create_host_guest_topology,\n",
+    "                    create_host_mol2, convert_mol2_to_sybyl_antechamber,\n",
+    "                    load_mol2, check_unique_atom_names,\n",
+    "                    check_bond_lengths,\n",
+    "                    extract_water_and_ions, create_water_and_ions_parameters)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Step 1: process the input files"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "First, let's specify the directory of "
+    "Before we begin, let's specify the starting file names and prefix for the intermediary files. We are also going to write a bunch of temporary files that can be cleaned up later, but for debugging, I leave them. Also, the `utils.py` functions using the `logging` module, so we can specify how much information we want. Here I'll set the logging level to `INFO`."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 102,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import logging\n",
+    "from importlib import reload\n",
+    "# `logging` needs to be reloaded, because `jupyter notebook` itself \n",
+    "# uses the logging module to print messages to standard output...\n",
+    "reload(logging)\n",
+    "logger = logging.getLogger()\n",
+    "logger.setLevel(logging.INFO)\n",
+    "logging.basicConfig(\n",
+    "    format='%(asctime)s %(message)s', datefmt='%Y-%m-%d %I:%M:%S %p')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 105,
    "metadata": {},
    "outputs": [],
    "source": [
     "test_case = 'cb7-1/'\n",
     "destination = './tests/' + test_case\n",
+    "reference_prmtop = 'cb7-1.prmtop'\n",
+    "reference_inpcrd = 'cb7-1.rst7'\n",
+    "\n",
+    "\n",
+    "prefix = 'cb7-1'\n",
     "host_resname = 'CB7'\n",
     "guest_resname = 'MOL'"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Next, let's specify the output and intermediate files."
    ]
   },
   {
@@ -98,31 +106,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [],
    "source": [
     "if not os.path.exists(destination):\n",
     "    os.makedirs(destination)\n",
     "    \n",
-    "request = urllib.request.urlretrieve(\"https://rawgit.com/MobleyLab/benchmarksets/master/input_files/cb7-set1/prmtop-rst7/cb7-1.prmtop\", destination + \"cb7-1.prmtop\")\n",
-    "request = urllib.request.urlretrieve(\"https://rawgit.com/MobleyLab/benchmarksets/master/input_files/cb7-set1/prmtop-rst7/cb7-1.rst7\", destination + \"cb7-1.rst7\")"
+    "request = urllib.request.urlretrieve(\"https://rawgit.com/MobleyLab/benchmarksets/master/input_files/cb7-set1/prmtop-rst7/cb7-1.prmtop\", destination + reference_prmtop)\n",
+    "request = urllib.request.urlretrieve(\"https://rawgit.com/MobleyLab/benchmarksets/master/input_files/cb7-set1/prmtop-rst7/cb7-1.rst7\", destination + reference_inpcrd)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Before we get started, let's grab the box vectors from the files -- this will come in handy later, because we lose this information when we merge the structures down below."
+    "At this point, it is useful to visualize the structure with e.g., `nglview`.\n",
+    "\n",
+    "Before we start the conversion, let's grab the box vectors from the files -- this will come in handy later, because we lose this information when we merge the structures down below."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [],
    "source": [
-    "reference = pmd.load_file(destination + 'cb7-1.prmtop', xyz=destination + 'cb7-1.rst7')\n",
+    "reference = pmd.load_file(destination + reference_prmtop, xyz=destination + reference_inpcrd)\n",
     "box = reference.box"
    ]
   },
@@ -135,13 +145,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 108,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2018-03-02 11:01:55 AM Creating ./tests/cb7-1/cb7-1.rst7 with CONECT records...\n"
+     ]
+    }
+   ],
    "source": [
-    "create_pdb_with_conect(solvated_pdb=destination + 'cb7-1.rst7',\n",
-    "                      amber_prmtop=destination + 'cb7-1.prmtop',\n",
-    "                      output_pdb=destination + 'cb7-1.pdb')"
+    "create_pdb_with_conect(solvated_pdb=destination + reference_inpcrd,\n",
+    "                      amber_prmtop=destination + reference_prmtop,\n",
+    "                      output_pdb=destination + prefix + '.pdb')"
    ]
   },
   {
@@ -153,12 +171,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 109,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2018-03-02 11:02:12 AM Pruning water-water CONECT records...\n"
+     ]
+    }
+   ],
    "source": [
-    "prune_conect(input_pdb='cb7-1.pdb',\n",
-    "            output_pdb='cb7-1.pruned.pdb',\n",
+    "prune_conect(input_pdb=prefix + '.pdb',\n",
+    "            output_pdb=prefix + '.pruned.pdb',\n",
     "            path=destination)"
    ]
   },
@@ -171,12 +197,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 110,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2018-03-02 11:02:26 AM Splitting topology into components...\n",
+      "2018-03-02 11:02:28 AM Creating a combined topology for the host and guest molecules...\n"
+     ]
+    }
+   ],
    "source": [
-    "components = split_topology(file_name=destination + 'cb7-1.pruned.pdb')\n",
-    "hg_topology = create_host_guest_topology(components, host_resname=host_resname, guest_resname=guest_resname)"
+    "components = split_topology(file_name=destination + prefix + '.pruned.pdb')\n",
+    "hg_topology = create_host_guest_topology(components, \n",
+    "                                         host_resname=host_resname, \n",
+    "                                         guest_resname=guest_resname)"
    ]
   },
   {
@@ -188,19 +225,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 111,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2018-03-02 11:03:09 AM Writing a `mol2` for the host molecule...\n",
+      "2018-03-02 11:03:09 AM Writing a `mol2` for the host molecule...\n",
+      "2018-03-02 11:03:09 AM Converting ./tests/cb7-1/CB7.mol2 to SYBYL atom types via Antechamber...\n",
+      "2018-03-02 11:03:09 AM Converting ./tests/cb7-1/MOL.mol2 to SYBYL atom types via Antechamber...\n"
+     ]
+    }
+   ],
    "source": [
     "create_host_mol2(\n",
-    "    solvated_pdb=destination + 'cb7-1.pruned.pdb',\n",
-    "    amber_prmtop=destination + 'cb7-1.prmtop',\n",
+    "    solvated_pdb=destination + prefix + '.pruned.pdb',\n",
+    "    amber_prmtop=destination + reference_prmtop,\n",
     "    mask=host_resname,\n",
     "    output_mol2=destination + host_resname + '.mol2')\n",
     "\n",
     "create_host_mol2(\n",
-    "    solvated_pdb=destination + 'cb7-1.pruned.pdb',\n",
-    "    amber_prmtop=destination + 'cb7-1.prmtop',\n",
+    "    solvated_pdb=destination + prefix + '.pdb',\n",
+    "    amber_prmtop=destination + reference_prmtop,\n",
     "    mask=guest_resname,\n",
     "    output_mol2=destination + guest_resname + '.mol2')\n",
     "\n",
@@ -219,28 +267,40 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We also need to separate out the dummy atoms, waters, and ions from the starting AMBER files."
+    "We also need to separate out waters and ions from the starting AMBER files.\n",
+    "\n",
+    "It is a little confusing that the following function runs with `dummy_atoms=True`. That setting means don't specifically strip dummy atoms from the reference coordinates, and is correct when dummy atoms are not present. Yet the second function call needs `dummy_atoms=False` because dummy atoms do *not* need parameters, if they are absent. This could be made more clear."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 115,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2018-03-02 11:50:20 AM Extracting water and ions from cb7-1.prmtop...\n",
+      "2018-03-02 11:50:20 AM Creating parameters for the waters and ions...\n"
+     ]
+    }
+   ],
    "source": [
     "extract_water_and_ions(\n",
-    "    amber_prmtop=destination + 'cb7-1.prmtop',\n",
-    "    amber_inpcrd=destination + 'cb7-1.rst7',\n",
+    "    amber_prmtop=reference_prmtop,\n",
+    "    amber_inpcrd=reference_inpcrd,\n",
     "    host_residue=':' + host_resname,\n",
     "    guest_residue=':' + guest_resname,\n",
     "    dummy_atoms=True,\n",
-    "    output_pdb=destination + 'water_ions.pdb')\n",
+    "    output_pdb='water_ions.pdb',\n",
+    "    path=destination)\n",
     "\n",
     "create_water_and_ions_parameters(\n",
     "    input_pdb='water_ions.pdb',\n",
     "    output_prmtop='water_ions.prmtop',\n",
     "    output_inpcrd='water_ions.inpcrd',\n",
-    "    dummy_atoms=True,\n",
+    "    dummy_atoms=False,\n",
     "    path=destination)"
    ]
   },
@@ -248,14 +308,25 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Step 2: load in the files we just created"
+    "Now, we'll create `mol2` files with **SYBYL atom types** for the water and ions."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 116,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2018-03-02 11:51:57 AM Loading ./tests/cb7-1/CB7-sybyl.mol2...\n",
+      "2018-03-02 11:51:57 AM Loading ./tests/cb7-1/MOL-sybyl.mol2...\n",
+      "2018-03-02 11:51:57 AM Checking all atoms have unique names...\n",
+      "2018-03-02 11:51:57 AM Checking all atoms have unique names...\n"
+     ]
+    }
+   ],
    "source": [
     "host = load_mol2(\n",
     "    filename=destination + host_resname + '-sybyl.mol2',\n",
@@ -276,12 +347,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Create an OpenMM system"
+    "Finally, we can create the OpenMM system for the host and guest with SMIRNOFF99Frosst parameters."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -297,20 +368,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Create a ParmEd system and check for bad bonds"
+    "We'll convert the OpenMM system to a ParmEd structure and check for bad bonds."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 119,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Check if the host-guest parameter file already exists...\n",
-      "Check if the host-guest coordinate file already exists...\n"
+      "2018-03-02 11:54:52 AM Checking structure for bonds >4 A...\n"
      ]
     }
    ],
@@ -337,12 +407,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Load the water and ions into a ParmEd structure"
+    "Next, we'll load the water and ions into a ParmEd structure."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 120,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -355,41 +425,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now, let's merge the host-guest structure with the dummy atoms, the waters, and the ions."
+    "Now, let's merge the host-guest structure with the dummy atoms, the waters, and the ions, and set the box coordinates of the merged structure."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 123,
    "metadata": {},
    "outputs": [],
    "source": [
-    "merged.box = reference.box"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 90,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Check if solvated parameter file already exists...\n",
-      "Check if solvated coordinate file already exists...\n"
-     ]
-    }
-   ],
-   "source": [
     "merged = mergeStructure(hg_structure, water_and_ions)\n",
-    "\n",
+    "merged.box = reference.box\n",
     "try:\n",
-    "    merged.save(destination_directory + destination_top)\n",
+    "    merged.save(destination + 'smirnoff.prmtop')\n",
     "except:\n",
     "    print('Check if solvated parameter file already exists...')\n",
     "try:\n",
-    "    merged.save(destination_directory + destination_crd)\n",
+    "    merged.save(destination + 'smirnoff.inpcrd')\n",
     "except:\n",
     "    print('Check if solvated coordinate file already exists...')\n"
    ]
@@ -398,7 +450,50 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Finally, we can copy box information from the initial files and write the merged structure"
+    "Now that we have the parmaeters in a ParmEd structure, we can do quick comparisons between the \"reference\" (i.e., GAFF v1.7 here) parameters and SMIRNOFF99Frosst parameters."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 141,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "      2 N2   (2   )      30 C2   (30  )     0.9572   553.0000\n",
+      "      2 N2   (n   )      30 C2   (c   )     0.9572   553.0000\n"
+     ]
+    }
+   ],
+   "source": [
+    "for smirnoff_bond, reference_bond in zip(merged.bonds, reference.bonds):\n",
+    "    smirnoff_atom1, smirnoff_atom2 = smirnoff_bond.atom1, smirnoff_bond.atom2\n",
+    "    reference_atom1, reference_atom2 = reference_bond.atom1, reference_bond.atom2\n",
+    "    \n",
+    "    if smirnoff_bond.type is not None :\n",
+    "        if smirnoff_atom1.name == 'N2' and smirnoff_atom2.name == 'C2':\n",
+    "            atom1 = smirnoff_atom1\n",
+    "            atom2 = smirnoff_atom2\n",
+    "            print(\n",
+    "                f'{atom1.idx + 1:7d} {atom1.name:4} ({atom1.type:4}) {atom2.idx + 1:7d} '\n",
+    "                f'{atom2.name:4} ({atom2.type:4}) {bond.type.req:10.4f} {bond.type.k:10.4f}'\n",
+    "            )\n",
+    "        if reference_atom1.name == 'N2' and reference_atom2.name == 'C2':\n",
+    "            atom1 = reference_atom1\n",
+    "            atom2 = reference_atom2\n",
+    "            print(\n",
+    "                f'{atom1.idx + 1:7d} {atom1.name:4} ({atom1.type:4}) {atom2.idx + 1:7d} '\n",
+    "                f'{atom2.name:4} ({atom2.type:4}) {bond.type.req:10.4f} {bond.type.k:10.4f}'\n",
+    "            )"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Nice, these parameters look identical, but note the difference in atom type!"
    ]
   },
   {
