--- a/02-convert-APR-files.ipynb
+++ b/02-convert-APR-files.ipynb
@@ -4,22 +4,510 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Convert an existing APR file"
+    "# Convert a host-guest pair from an attach-pull-release workflow, with dummy atoms, and atom re-indexing"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This is going to address the following issues that have cropped up:\n",
+    "**$\\alpha$CD-1-butylamine (primary orientation)**\n",
     "\n",
-    "- https://github.com/openforcefield/openforcefield/issues/68 (Problem generating proper topology using either ParmEd or PDBFile)\n",
-    "- https://github.com/openforcefield/openforcefield/issues/66 ( Fix some issues with host-guest examples on some installations)\n",
-    "- https://github.com/openforcefield/smirnoff99Frosst/issues/73 (Many bonds are being assigned wildcard parameters in alpha-cyclodextrin)\n",
-    "- https://github.com/ParmEd/ParmEd/issues/959 (The rigidWater=True option in parmed.Structure.CreateSystem is not correctly working)\n",
-    "- https://github.com/openforcefield/openforcefield/issues/91 ( `createSystem` has nonfunctional argument `rigidWater` #91 )\n",
-    "- https://github.com/ParmEd/ParmEd/issues/930 ( Bond-related error saving AMBER `prmtop` from ParmEd structure #930 )\n",
-    "- https://github.com/MobleyLab/benchmarksets/issues/64 ( Errors using cyclic host `mol2` files with non-unique atom names #64 )"
+    "The initial bonded and Lennard-Jones parameters are GAFF v1.8, with partial charges determined using AM1-BCC on from a host residue monomer capped with methyls (see [Niel's paper](https://pubs.acs.org/doi/abs/10.1021/acs.jctc.7b00359) for details).\n",
+    "\n",
+    "This is largely going to follow the path in the first example notebook, but here we give special treatment to the dummy atoms, we polymerize the host from a single monomer, and we also generate a dictionary that maps between atoms and residues in the initial and final structures, so we rewrite restraints downstream."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
+   "source": [
+    "%load_ext autoreload\n",
+    "%autoreload 2\n",
+    "\n",
+    "import os as os\n",
+    "import urllib.request\n",
+    "\n",
+    "import parmed as pmd\n",
+    "\n",
+    "from openforcefield.typing.engines.smirnoff import ForceField, unit\n",
+    "from openforcefield.utils import mergeStructure\n",
+    "\n",
+    "from utils import (create_pdb_with_conect, prune_conect, split_topology, create_host_guest_topology,\n",
+    "                    create_host_mol2, convert_mol2_to_sybyl_antechamber,\n",
+    "                    load_mol2, check_unique_atom_names,\n",
+    "                    check_bond_lengths,\n",
+    "                    extract_water_and_ions, create_water_and_ions_parameters,\n",
+    "                    map_atoms, map_residues, load_pdb)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Before we begin, let's specify the starting file names and prefix for the intermediary files. We are also going to write a bunch of temporary files that can be cleaned up later, but for debugging, I leave them. Also, the `utils.py` functions using the `logging` module, so we can specify how much information we want. Here I'll set the logging level to `INFO`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import logging\n",
+    "from importlib import reload\n",
+    "# `logging` needs to be reloaded, because `jupyter notebook` itself \n",
+    "# uses the logging module to print messages to standard output...\n",
+    "reload(logging)\n",
+    "logger = logging.getLogger()\n",
+    "logger.setLevel(logging.INFO)\n",
+    "logging.basicConfig(\n",
+    "    format='%(asctime)s %(message)s', datefmt='%Y-%m-%d %I:%M:%S %p')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_case = 'a-bam-p/'\n",
+    "reference_destination = './tests/' + test_case + 'original/'\n",
+    "reference_prmtop = 'full.topo'\n",
+    "reference_inpcrd = 'full.crds'\n",
+    "\n",
+    "generated_destination = './tests/' + test_case + 'generated/'\n",
+    "prefix = 'full'\n",
+    "host_resname = 'MGO'\n",
+    "guest_resname = 'BAM'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "reference = pmd.load_file(reference_destination + reference_prmtop, \n",
+    "                          xyz=reference_destination + reference_inpcrd)\n",
+    "box = reference.box"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Next, we'll create a proper PDB from these AMBER files, and delete the `CONECT` records that are solvent-solvent."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2018-03-02 12:21:20 PM Creating ./tests/a-bam-p/generated/full.pdb with CONECT records...\n"
+     ]
+    }
+   ],
+   "source": [
+    "create_pdb_with_conect(solvated_pdb=reference_destination + reference_inpcrd,\n",
+    "                      amber_prmtop=reference_destination + reference_prmtop,\n",
+    "                      output_pdb=generated_destination + prefix + '.pdb')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We need to prune the `CONECT` records to deal with https://github.com/openforcefield/openforcefield/issues/68."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2018-03-02 12:21:41 PM Pruning water-water CONECT records...\n"
+     ]
+    }
+   ],
+   "source": [
+    "prune_conect(input_pdb=prefix + '.pdb',\n",
+    "            output_pdb=prefix + '.pruned.pdb',\n",
+    "            path=generated_destination)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We'll split the PDB into separate topology objects, and extract the host-guest topology for now."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2018-03-02 12:21:57 PM Splitting topology into components...\n",
+      "2018-03-02 12:21:58 PM Creating a combined topology for the host and guest molecules...\n"
+     ]
+    }
+   ],
+   "source": [
+    "components = split_topology(file_name=generated_destination + prefix + '.pruned.pdb')\n",
+    "hg_topology = create_host_guest_topology(components, \n",
+    "                                         host_resname=host_resname, \n",
+    "                                         guest_resname=guest_resname)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now, let's polymerize the host because the input `mol2` file is only a single sugar residue and not the cyclic molecule. This *should* occur without intervention because `cpptraj` will detect that the single residue in the input `mol2` matches *multiple* residues in the `pdb`, and be able to write out the multiresidue `mol2` file with proper topology."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2018-03-02 12:27:17 PM Writing a `mol2` for the host molecule...\n",
+      "2018-03-02 12:27:17 PM Writing a `mol2` for the host molecule...\n",
+      "2018-03-02 12:27:17 PM Converting ./tests/a-bam-p/generated/MGO.mol2 to SYBYL atom types via Antechamber...\n",
+      "2018-03-02 12:27:17 PM Converting ./tests/a-bam-p/generated/BAM.mol2 to SYBYL atom types via Antechamber...\n"
+     ]
+    }
+   ],
+   "source": [
+    "create_host_mol2(\n",
+    "    solvated_pdb=generated_destination + prefix + '.pruned.pdb',\n",
+    "    amber_prmtop=reference_destination + reference_prmtop,\n",
+    "    mask=host_resname,\n",
+    "    output_mol2=generated_destination + host_resname + '.mol2')\n",
+    "\n",
+    "create_host_mol2(\n",
+    "    solvated_pdb=generated_destination + prefix + '.pdb',\n",
+    "    amber_prmtop=reference_destination + reference_prmtop,\n",
+    "    mask=guest_resname,\n",
+    "    output_mol2=generated_destination + guest_resname + '.mol2')\n",
+    "\n",
+    "convert_mol2_to_sybyl_antechamber(\n",
+    "    input_mol2=generated_destination + host_resname + '.mol2',\n",
+    "    output_mol2=generated_destination + host_resname + '-sybyl.mol2',\n",
+    "    ac_doctor=False)\n",
+    "\n",
+    "convert_mol2_to_sybyl_antechamber(\n",
+    "    input_mol2=generated_destination + guest_resname + '.mol2',\n",
+    "    output_mol2=generated_destination + guest_resname + '-sybyl.mol2',\n",
+    "    ac_doctor=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We also need to separate out waters and ions from the starting AMBER files.\n",
+    "\n",
+    "Below, we are going to first run `extract_water_and_ions` with `dummy_atoms=True` to also extract the dummy atoms, then run `create_water_and_ions_parameters` with `dummy_atoms=True` to create dummy atom parameters, in contrast to the first example notebook."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2018-03-02 12:39:06 PM Extracting water and ions from ./tests/a-bam-p/original/full.topo...\n",
+      "2018-03-02 12:39:06 PM Creating parameters for the waters and ions...\n",
+      "2018-03-02 12:39:06 PM Writing a `frcmod` file for dummy atoms...\n",
+      "2018-03-02 12:39:06 PM Writing a `mol2` file for dummy atoms...\n"
+     ]
+    }
+   ],
+   "source": [
+    "extract_water_and_ions(\n",
+    "    amber_prmtop=reference_destination + reference_prmtop,\n",
+    "    amber_inpcrd=reference_destination + reference_inpcrd,\n",
+    "    host_residue=':' + host_resname,\n",
+    "    guest_residue=':' + guest_resname,\n",
+    "    dummy_atoms=True,\n",
+    "    output_pdb=generated_destination + 'water_ions.pdb'\n",
+    "    )\n",
+    "\n",
+    "create_water_and_ions_parameters(\n",
+    "    input_pdb='water_ions.pdb',\n",
+    "    output_prmtop='water_ions.prmtop',\n",
+    "    output_inpcrd='water_ions.inpcrd',\n",
+    "    dummy_atoms=True,\n",
+    "    path=generated_destination)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now, we'll create `mol2` files with **SYBYL atom types** for the water and ions."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2018-03-02 12:32:34 PM Loading ./tests/a-bam-p/generated/MGO-sybyl.mol2...\n",
+      "2018-03-02 12:32:34 PM Loading ./tests/a-bam-p/generated/BAM-sybyl.mol2...\n",
+      "2018-03-02 12:32:34 PM Checking all atoms have unique names...\n",
+      "2018-03-02 12:32:34 PM Checking all atoms have unique names...\n"
+     ]
+    }
+   ],
+   "source": [
+    "host = load_mol2(\n",
+    "    filename=generated_destination + host_resname + '-sybyl.mol2',\n",
+    "    name=host_resname,\n",
+    "    add_tripos=True)\n",
+    "\n",
+    "guest = load_mol2(\n",
+    "    filename=generated_destination + guest_resname + '-sybyl.mol2',\n",
+    "    name=guest_resname,\n",
+    "    add_tripos=False)\n",
+    "\n",
+    "check_unique_atom_names(host)\n",
+    "check_unique_atom_names(guest)\n",
+    "molecules = [host, guest]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "At this point, let's create the OpenMM system with SMIRNOFF99Frosst parameters and finish dealing with the host and guest."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ff = ForceField('forcefield/smirnoff99Frosst.ffxml')\n",
+    "system = ff.createSystem(\n",
+    "    hg_topology.topology,\n",
+    "    molecules,\n",
+    "    nonbondedCutoff=1.1 * unit.nanometer,\n",
+    "    ewaldErrorTolerance=1e-4)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We'll convert the OpenMM system to a ParmEd structure and check for bad bonds."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2018-03-02 12:34:01 PM Checking structure for bonds >4 A...\n"
+     ]
+    }
+   ],
+   "source": [
+    "hg_structure = pmd.openmm.topsystem.load_topology(\n",
+    "    hg_topology.topology, system, hg_topology.positions)\n",
+    "\n",
+    "check_bond_lengths(hg_structure, threshold=4)\n",
+    "\n",
+    "try:\n",
+    "    hg_structure.save(generated_destination + 'hg.prmtop')\n",
+    "except OSError:\n",
+    "    print(\n",
+    "        'Check if the host-guest parameter file already exists...')\n",
+    "\n",
+    "try:\n",
+    "    hg_structure.save(generated_destination + 'hg.inpcrd')\n",
+    "except OSError:\n",
+    "    print(\n",
+    "        'Check if the host-guest coordinate file already exists...')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Next, we'll load the water and ions into a ParmEd structure."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "water_and_ions = pmd.amber.AmberParm(\n",
+    "    generated_destination + 'water_ions.prmtop',\n",
+    "    xyz=generated_destination + 'water_ions.inpcrd')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now, let's merge the host-guest structure with the dummy atoms, the waters, and the ions, and set the box coordinates of the merged structure."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "merged = mergeStructure(hg_structure, water_and_ions)\n",
+    "merged.box = reference.box\n",
+    "\n",
+    "try:\n",
+    "    merged.save(generated_destination + 'smirnoff.prmtop')\n",
+    "except:\n",
+    "    print('Check if solvated parameter file already exists...')\n",
+    "try:\n",
+    "    merged.save(generated_destination + 'smirnoff.inpcrd')\n",
+    "except:\n",
+    "    print('Check if solvated coordinate file already exists...')\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "At this point, we can compare parameters between the sets, like in the first example notebook. But for attach-pull-release calculations, we usually run simulations with restraints specified relative to the dummy atoms (either by residue number or atom index), and because here we *included* the dummy atoms with the water and ions, they are written *after* the host and guest instead of at the beginning of the coordinates. Thus, the atom indexing and residue indexing between the reference and generated structures are different. N.B. If I include the dummy atoms with the host and guest, I was not able to correctly parameterize the host and guest with SMIRNOFF99Frosst.\n",
+    "\n",
+    "To help with this, I've written functions that will look through connected bonds and generate a mapping between atoms and residues. To map the atoms, I'm going to save the reference and target structures as `mol2`. To map the residues, I'm going to save the reference and target structures as `pdb`. This is because the interaction between OpenEye and ParmEd (or maybe just one of those) has difficult saving and re-reading `mol2` files with dummy atoms. On the other hand, when reading a `pdb`, we can instruct OpenEye to *not* ignore dummy atoms (if we ignore dummy atoms -- even in both cases -- the graph is not isomorphic). I have not fully investigated what is going on here, but this workaround seems to work well enough."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "try:\n",
+    "    reference.save(generated_destination + 'reference.pdb')\n",
+    "    reference.save(generated_destination + 'reference.mol2')\n",
+    "except OSError:\n",
+    "    print('Check if reference pdb and mol2 files exist...')\n",
+    "\n",
+    "try:\n",
+    "    merged.save(generated_destination + 'target.pdb')\n",
+    "    merged.save(generated_destination + 'target.mol2')\n",
+    "except OSError:\n",
+    "    print('Check if target pdb and mol2 files exist...')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now, let's load those into OpenEye `OEMol`s, so we can do the mapping."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2018-03-02 12:52:36 PM Loading ./tests/a-bam-p/generated/reference.mol2...\n",
+      "2018-03-02 12:52:36 PM Loading ./tests/a-bam-p/generated/target.mol2...\n",
+      "2018-03-02 12:52:36 PM Generating map between atoms...\n"
+     ]
+    }
+   ],
+   "source": [
+    "reference_mol = load_mol2(generated_destination + 'reference.mol2')\n",
+    "target_mol = load_mol2(generated_destination + 'target.mol2')\n",
+    "\n",
+    "atom_mapping = map_atoms(reference_mol, target_mol)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can use the atom mapping to do the residue mapping."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2018-03-02 12:54:28 PM Loading ./tests/a-bam-p/generated/reference.pdb...\n",
+      "2018-03-02 12:54:28 PM Loading ./tests/a-bam-p/generated/target.pdb...\n",
+      "2018-03-02 12:54:28 PM Generating map between residues...\n"
+     ]
+    }
+   ],
+   "source": [
+    "reference_mol = load_pdb(generated_destination + 'reference.pdb')\n",
+    "target_mol = load_pdb(generated_destination + 'target.pdb')\n",
+    "\n",
+    "residue_mapping = map_residues(atom_mapping, reference_mol, target_mol)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now, we're basically finished. If we had AMBER input files in the same directory, we could rewrite the input file by searching for atom or residue masks as positional restraints and using the dictionaries to replace them (`rewrite_amber_input_file`). Likewise, we could rewrite files with NMR restraints using the atom_mapping dictionary (`rewrite_restraints_file`)."
    ]
   },
   {
