Makes generated_destination if it does not exist

--- a/02-convert-APR-files.ipynb
+++ b/02-convert-APR-files.ipynb
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,7 +90,13 @@
     "generated_destination = './tests/' + test_case + 'generated/'\n",
     "prefix = 'full'\n",
     "host_resname = 'MGO'\n",
-    "guest_resname = 'BAM'"
+    "guest_resname = 'BAM'\n",
+    "\n",
+    "\n",
+    "try:\n",
+    "    os.stat(generated_destination)\n",
+    "except:\n",
+    "    os.mkdir(generated_destination)"
    ]
   },
   {
